# AT_robot-lab

./: .clang-tidy  .clangd  .gitignore  .gitmodules  README.md  README_CN.md  build.sh  record20260515_211359.yaml  待办.md
policy/atdog/: base.yaml
policy/atdog/robot_lab/: config.yaml  policy.pt
policy/atdog2/: base.yaml
policy/atdog2/robot_lab/: config.yaml  policy.pt
policy/atdog2/robot_lab_sand/: config.yaml
policy/atdog2/robot_lab_stairs/: config.yaml  policy.pt
policy/go2/robot_lab/: policy.pt
src/obstacle_game/: CMakeLists.txt  README.md  package.xml
src/obstacle_game/config/: path1.yaml  scene1.yaml
src/obstacle_game/include/core/: pilet.hpp  pilot.hpp  record.hpp  robot.hpp
src/obstacle_game/launch/: atdog2_run.launch.py  remote_test.launch.py
src/obstacle_game/src/: main.cpp  test.cpp
src/obstacle_game/src/core/: pilot.cpp  record.cpp  robot.cpp
src/remote_node/: CMakeLists.txt  package.xml
src/remote_node/include/remote_node/: remote_comm.hpp  remote_node.hpp
src/remote_node/src/: main.cpp  remote_comm.cpp  remote_node.cpp
src/rl_sar/: CMakeLists.txt  package.xml
src/rl_sar/fsm_robot/: cross_wall.cpp  cross_wall.hpp  fsm_all.hpp  fsm_atdog.hpp  fsm_atdog2.hpp  fsm_go2.hpp
src/rl_sar/include/: rl_real_atdog.hpp  rl_real_atdog2.hpp
src/rl_sar/src/: rl_real_atdog.cpp  rl_real_atdog2.cpp  rl_sim_mujoco.cpp
src/robot_joint_controller/: CMakeLists.txt
src/robot_msgs/: CMakeLists.txt  package.xml
src/robot_msgs/msg/: Cmd.msg  Remote.msg
