<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote_node</name>
  <version>0.0.0</version>
  <description>遥控器驱动包，接收无线遥控器信号，通过ROS2话题发布机器人运动指令</description>
  <maintainer email="cloud1202@qq.com">lyz</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>robot_msgs</depend>
  <depend>serial</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
