<?xml version="1.0"?>
<package format="3">
    <name>rl_sar</name>
    <version>3.0.0</version>
    <description>The rl_sar package</description>

    <maintainer email="fanziqi614@gmail.com">Ziqi Fan</maintainer>

    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>gazebo_ros</depend>
    <depend>yaml-cpp</depend>
    <depend>robot_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>robot_joint_controller</depend>
    <depend>controller_manager</depend>
    <depend>joint_state_controller</depend>
    <depend>robot_state_publisher</depend>
    <depend>rospy</depend>
    <depend>kdl_parser</depend>
    <depend>orocos_kdl</depend>

    <!-- External CMake library dependencies -->
    <build_depend>eigen</build_depend>
    <exec_depend>eigen</exec_depend>
    
    <build_depend>qpOASES</build_depend>
    <exec_depend>qpOASES</exec_depend>
    
    <build_depend>osqp</build_depend>
    <exec_depend>osqp</exec_depend>

    <build_depend>osqp-eigen</build_depend>
    <exec_depend>osqp-eigen</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
